Proyecto2/black-friday/k8s/go-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-consumer
  namespace: black-friday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-consumer
  template:
    metadata:
      labels:
        app: go-consumer
    spec:
      containers:
      - name: go-consumer
        image: 172.31.13.124:5000/go-consumer:v3
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
