Proyecto2/black-friday/k8s/rust-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: black-friday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
      - name: rust-api
        # NOTA: En GCP cambiaremos 'localhost:5000' por la IP de tu VM de Zot
        image: localhost:5000/rust-api:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
  namespace: black-friday
spec:
  type: LoadBalancer # En local o GCP esto te dará una IP externa
  selector:
    app: rust-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
