Proyecto2/black-friday/k8s/deploy-system.yaml
# --- GO WRITER ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-writer
  namespace: black-friday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-writer
  template:
    metadata:
      labels:
        app: go-writer
    spec:
      containers:
      - name: go-writer
        image: 172.31.14.61:5000/go-writer:v1
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: go-writer-service
  namespace: black-friday
spec:
  type: ClusterIP
  selector:
    app: go-writer
  ports:
    - port: 50051
      targetPort: 50051

# --- GO BRIDGE ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-bridge
  namespace: black-friday
spec:
  selector:
    matchLabels:
      app: go-bridge
  template:
    metadata:
      labels:
        app: go-bridge
    spec:
      containers:
      - name: go-bridge
        image: 172.31.14.61:5000/go-bridge:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "300m"
            memory: "128Mi"

# --- GO CONSUMER ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-consumer
  namespace: black-friday
spec:
  selector:
    matchLabels:
      app: go-consumer
  template:
    metadata:
      labels:
        app: go-consumer
    spec:
      containers:
      - name: go-consumer
        image: 172.31.14.61:5000/go-consumer:v9
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"

# --- RUST API ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: black-friday
spec:
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
      - name: rust-api
        image: 172.31.14.61:5000/rust-api:v2
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "150m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

# --- GRAFANA ---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: grafana-pvc
  namespace: black-friday
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
# --- DEPLOYMENT GRAFANA ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: black-friday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/var/lib/grafana"
          name: grafana-storage
      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: black-friday
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
      nodePort: 32000

# --- INGRESS ---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-api-ingress
  namespace: black-friday
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /purchase
        pathType: Prefix
        backend:
          service:
            name: rust-api-service
            port:
              number: 80
